<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Wave extends Model
{
    use HasFactory;

    protected $guarded = [];

    public function applicants(): HasMany
    {
        return $this->hasMany(Applicant::class);
    }
}
